--- a/btvn_buoi6/assets/bai3.css
+++ b/btvn_buoi6/assets/bai3.css
@@ -23,7 +23,6 @@
     margin-left: 10px;
     height: 30px;
     width: 110px;
-    margin-right: 500px;
     border-radius: 10px;
     outline: none;
     border: none;
@@ -35,9 +34,9 @@
     font-size: 15px;
 }
 
-.nav-items {
+/* .nav-items {
     flex: 1;
-}
+} */
 
 ul>li {
     display: inline-block;
