--- a/btvn_buoi6/assets/bai3.css
+++ b/btvn_buoi6/assets/bai3.css
@@ -14,6 +14,7 @@
 }
 
 .navbar {
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 20px;
@@ -23,7 +24,6 @@
     margin-left: 10px;
     height: 30px;
     width: 110px;
-    margin-right: 500px;
     border-radius: 10px;
     outline: none;
     border: none;
@@ -35,9 +35,9 @@
     font-size: 15px;
 }
 
-.nav-items {
+/* .nav-items {
     flex: 1;
-}
+} */
 
 ul>li {
     display: inline-block;
